--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,46 @@
 .App {
 	text-align: center;
+	background-color: wheat;
+	};
 
-	button {
+	.numberStyle {
+		background: lavender;
+		border: 2px solid black;
+		font-size: 16px;
+		width: 100px;
+		height: 23px;
+		padding-right: 5px;
+		text-align: right;
+	};
+
+	.textStyle {
+		background: lavender;
+		border: 2px solid black;
+		font-size: 16px;
+		width: 100px;
+		height: 23px;
+		text-align: left;
+		padding-left: 5px;
+	};
+
+	.titleStyle {
+		font-size: 30px;
 		font-weight: bold;
-	}
-}
+		text-align: center;
+		color: black;
+	};
+
+	.headerStyle {
+		background: lavender;
+		border: 2px solid black;
+		text-align: center;
+		font-size: 21px;
+		font-weight: bold;
+		height: 35px;
+	};
+
+
+	.tableStyle {
+		border-Collapse: collapse;
+		margin: auto;
+	};
