--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 .App {
 	text-align: center;
-	background-color: wheat;
+	background-color: Wheat;
 	};
 
 	.numberStyle {
@@ -8,7 +8,7 @@
 		border: 2px solid black;
 		font-size: 16px;
 		width: 100px;
-		height: 23px;
+		height: 10px;
 		padding-right: 5px;
 		text-align: right;
 	};
